[metadata]
name = micromind
version = 1.1
license = MIT
description = A short description
long_description = file: README.md
author = Kevin Cortacero
author_email = kevin.cortacero@inserm.fr
classifiers=
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src
